--- a/package.json
+++ b/package.json
@@ -12,9 +12,20 @@
   },
   "dependencies": {
     "@nuxtjs/style-resources": "^1.0.0",
-    "nuxt": "^2.0.0"
+    "imagemin-gifsicle": "^7.0.0",
+    "imagemin-mozjpeg": "^9.0.0",
+    "imagemin-pngquant": "^9.0.0",
+    "imagemin-svgo": "^8.0.0",
+    "lqip-loader": "^2.2.0",
+    "nuxt": "^2.0.0",
+    "responsive-loader": "^1.2.0",
+    "sharp": "^0.25.4",
+    "sqip-loader": "^1.0.0",
+    "vue-lazyload": "^1.3.3",
+    "webp-loader": "^0.6.0"
   },
   "devDependencies": {
+    "@aceforth/nuxt-optimized-images": "^1.0.1",
     "node-sass": "^4.14.1",
     "sass-loader": "^8.0.2"
   }
